test/files/neg/qmark-deprecated.check
qmark-deprecated.scala:4: error: using `?` as a type name requires backticks. [quick fix available]
class Foo[?] // error
          ^
qmark-deprecated.scala:6: error: using `?` as a type name requires backticks. [quick fix available]
class Bar[M[?] <: List[?]] // error on the definition
            ^
qmark-deprecated.scala:10: error: using `?` as a type name requires backticks. [quick fix available]
  class ? { val x = 1 } // error
        ^
qmark-deprecated.scala:16: error: using `?` as a type name requires backticks. [quick fix available]
  trait ? // error
        ^
qmark-deprecated.scala:22: error: using `?` as a type name requires backticks. [quick fix available]
  type ? = Int // error
       ^
qmark-deprecated.scala:33: error: using `?` as a type name requires backticks. [quick fix available]
  def bar1[?] = {} // error
           ^
qmark-deprecated.scala:35: error: using `?` as a type name requires backticks. [quick fix available]
  def bar3[M[?]] = {} // error
             ^
qmark-deprecated.scala:38: error: using `?` as a type name requires backticks. [quick fix available]
  type A[?] = Int // error
         ^
8 errors
